--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,9 @@
 .body {
   margin: 0;
   padding: 0;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /* Header */
