--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,9 @@
 
 .html {
   font-family: 'Roboto', sans-serif;
-  background-color: black;
+  background-color: white;
+  width: 100vw;
+  overflow-x: hidden
 }
 
 .body {
@@ -113,6 +115,8 @@
   width: 300px;
   height: 300px;
   box-sizing: border-box;
+  object-fit: contain;
+  object-position: 0;
 }
 
 .dzen__man {
@@ -142,5 +146,6 @@
 .content {
   background-color: white;
   height: 100vh;
+  width: 100%;
   z-index: 2;
 }
