--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'Rubik', sans-serif;
-  src: url('./fonts/Rubik-VariableFont_wght.ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 @keyframes rotation {
   from {
